--- a/html-css/kdt_html_css/layout/position/실습/실습_bespoke.html
+++ b/html-css/kdt_html_css/layout/position/실습/실습_bespoke.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="img" src="/html-css/kdt_html_css/layout/position/bespoke.webp" alt="비스포크냉장고">
+    <img class="img" src="./bespoke.webp" alt="비스포크냉장고">
     <a class = "link link-position" href="비스코프냉장고">비교하기</a>
   </div>
 
