--- a/Django/kdt_Django/07_FORM/FORM_practice/articles/templates/articles/new.html
+++ b/Django/kdt_Django/07_FORM/FORM_practice/articles/templates/articles/new.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <form action="{% url 'articles:create' %}" method = POST>
+  <form action="{% url 'articles:create' %}" method = "POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value ="작성완료">
