--- a/Django/kdt_Django/10_relationsships/relationships_practice/articles/templates/articles/detail.html
+++ b/Django/kdt_Django/10_relationsships/relationships_practice/articles/templates/articles/detail.html
@@ -6,11 +6,15 @@
   <p>내용: {{ article.content }}</p>
   <p>작성일: {{ article.created_at }}</p>
   <p>수정일: {{ article.updated_at }}</p>
-  <form action="{% url 'articles:delete' article.pk %}" method='POST'>
-    {% csrf_token %}
-    <input type="submit" value ='삭제'>
-  </form>
-  <a href="{% url 'articles:update' article.pk %}">수정하기</a>
+
+  {% if request.user == article.user  %}
+    <form action="{% url 'articles:delete' article.pk %}" method='POST'>
+      {% csrf_token %}
+      <input type="submit" value ='삭제'>
+    </form>
+    <a href="{% url 'articles:update' article.pk %}">수정하기</a>
+  {% endif %}
+
   <a href="{% url 'articles:index' %}">뒤로가기</a>
 
   <hr>
@@ -18,11 +22,13 @@
   <ul>
     {% for comment in comments  %}
       <li>
-        {{ comment.content }}
-        <form action=" {% url 'articles:comment_delete' article.pk comment.pk %}" method = "POST">
-          {% csrf_token %}
-          <input type="submit" value="삭제">
-        </form>
+        {{ comment.user }}: {{ comment.content }}
+        {% if comment.user == request.user  %}
+          <form action=" {% url 'articles:comment_delete' article.pk comment.pk %}" method = "POST">
+            {% csrf_token %}
+            <input type="submit" value="삭제">
+          </form>
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
