--- a/React/한입리액트/02_React/simplediary/src/App.css
+++ b/React/한입리액트/02_React/simplediary/src/App.css
@@ -4,7 +4,8 @@
   padding: 20px;
 }
 
-.DiaryEditor input, textarea {
+.DiaryEditor input,
+textarea {
   margin-bottom: 20px;
   width: 500px;
   padding: 10px;
@@ -17,7 +18,7 @@
 .DiaryEditor select {
   width: 300px;
   padding: 10px;
-  margin-left : 10px;
+  margin-left: 10px;
   margin-bottom: 20px;
 }
 
@@ -25,4 +26,40 @@
   width: 500px;
   padding: 10px;
   cursor: pointer;
+}
+
+/* List */
+
+.DiaryList {
+  border: 1px solid gray;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.DiaryList h2 {
+  text-align: center;
+}
+
+/* Item */
+
+.DiaryItem {
+  background-color: rgb(240, 240, 240);
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.DiaryItem .info {
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.DiaryItem .date {
+  color: gray;
+}
+
+.DiaryItem .content {
+  font-weight: bold;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
